# GifSamplerForGlide

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hash/study/giflib/: MainActivity.java
app/src/main/java/com/hash/study/giflib/extension/: GifExtensions.java  GifResourceDecoder.java  GlideGifModule.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
lib-image-gif/: CMakeLists.txt  build.gradle
lib-image-gif/src/main/: AndroidManifest.xml
lib-image-gif/src/main/cpp/: Color.h  GifDecoder.cpp  GifDecoder.h  lib-native-bridge.cpp
lib-image-gif/src/main/cpp/giflib/: CMakeLists.txt  dgif_lib.c  egif_lib.c  gif_err.c  gif_font.c  gif_hash.c  gif_hash.h  gif_lib.h  gif_lib_private.h  gifalloc.c  openbsd-reallocarray.c
lib-image-gif/src/main/cpp/stream/: Stream.cpp
lib-image-gif/src/main/cpp/utils/: log.h
lib-image-gif/src/main/java/com/hash/study/gif/: FrameSequenceDrawable.java  GifDecoder.java
